Creato con Colaboratory

--- a/frasal.ipynb
+++ b/frasal.ipynb
@@ -6,7 +6,7 @@
       "name": "frasal.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPlWcUGLWQkheMqkD2FvSZL",
+      "authorship_tag": "ABX9TyMfbZLlvDSA/M6J0UOv5oUw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,7 +40,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "j4Yfg2Yl7esP"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 1,
       "metadata": {
         "id": "6ZnVYunkMaGw"
       },
@@ -75,7 +86,7 @@
       "metadata": {
         "id": "HGqz_wQ5oVYv"
       },
-      "execution_count": 42,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -89,9 +100,9 @@
           "height": 268
         },
         "id": "8t9Rep62pTiH",
-        "outputId": "70d05f72-7d1c-4ea2-e86a-229fc2c9a6fe"
+        "outputId": "a116cd52-304d-409e-d7da-bf10dd8e8b4d"
       },
-      "execution_count": 43,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -134,7 +145,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-ece96185-3cd3-4703-b464-8a00e3794bca\">\n",
+              "  <div id=\"df-8d162de4-3555-4d48-a9f6-06bb09570721\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -235,7 +246,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ece96185-3cd3-4703-b464-8a00e3794bca')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-8d162de4-3555-4d48-a9f6-06bb09570721')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -286,12 +297,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-ece96185-3cd3-4703-b464-8a00e3794bca button.colab-df-convert');\n",
+              "          document.querySelector('#df-8d162de4-3555-4d48-a9f6-06bb09570721 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-ece96185-3cd3-4703-b464-8a00e3794bca');\n",
+              "          const element = document.querySelector('#df-8d162de4-3555-4d48-a9f6-06bb09570721');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -314,7 +325,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 43
+          "execution_count": 3
         }
       ]
     },
@@ -328,9 +339,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "e9y-HidBpVk4",
-        "outputId": "b4a20fc4-1b6f-48b7-d1d4-47648832890a"
+        "outputId": "75e1acfe-e8d9-4e69-d97b-365832828236"
       },
-      "execution_count": 44,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -367,9 +378,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0oNCNVIcqDO3",
-        "outputId": "2b104f57-b1f6-4bb5-d9dc-dfca792d3e0d"
+        "outputId": "5b420bec-6a11-4eb0-a391-e31c673309da"
       },
-      "execution_count": 26,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -385,7 +396,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 26
+          "execution_count": 5
         }
       ]
     },
@@ -402,9 +413,9 @@
           "height": 879
         },
         "id": "mN6ZQM6ptK_5",
-        "outputId": "67fbe389-4e04-4028-80e6-28f77750ef6b"
+        "outputId": "0904e8ce-330f-46a8-f8c5-85b75b24ef12"
       },
-      "execution_count": 28,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "display_data",
@@ -430,7 +441,7 @@
       "metadata": {
         "id": "A0W5sZC5uNz2"
       },
-      "execution_count": 46,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -444,9 +455,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "N03opRMGu8Vn",
-        "outputId": "f140e61c-c0ac-44db-89f4-048658703a38"
+        "outputId": "1c086b67-1dd5-4c07-dace-146ba861740d"
       },
-      "execution_count": 33,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -465,7 +476,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 33
+          "execution_count": 8
         }
       ]
     },
@@ -479,9 +490,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "91gofcjQv4OJ",
-        "outputId": "e834840b-084d-48b3-e384-60bb9177c459"
+        "outputId": "82cd3a7f-655f-4048-d0d6-ec10d25009ae"
       },
-      "execution_count": 34,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -500,7 +511,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 34
+          "execution_count": 9
         }
       ]
     },
@@ -514,9 +525,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "puQkzAEBwHSO",
-        "outputId": "f4520dcd-8565-4cab-8cef-0fa5da97c014"
+        "outputId": "67fb35f8-b888-412d-c260-138d72bd1b6a"
       },
-      "execution_count": 36,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -535,7 +546,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 36
+          "execution_count": 10
         }
       ]
     },
@@ -558,37 +569,69 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "K3l0rHPFxVaQ",
-        "outputId": "59686c06-bcda-4de4-bf54-fddff804c971"
+        "outputId": "b372f5c4-2944-4a9a-ea21-7ea6dbdb96b9"
       },
-      "execution_count": 59,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "|--- feature_6 <= 180.00\n",
+            "|--- feature_7 <= 197.50\n",
             "|   |--- feature_5 <= 3.90\n",
             "|   |   |--- class: P\n",
             "|   |--- feature_5 >  3.90\n",
             "|   |   |--- feature_8 <= 3.95\n",
-            "|   |   |   |--- feature_0 <= 7.25\n",
-            "|   |   |   |   |--- feature_2 <= 16.25\n",
+            "|   |   |   |--- feature_1 <= 12.25\n",
+            "|   |   |   |   |--- feature_4 <= 26.25\n",
             "|   |   |   |   |   |--- feature_0 <= 6.50\n",
             "|   |   |   |   |   |   |--- class: A\n",
             "|   |   |   |   |   |--- feature_0 >  6.50\n",
             "|   |   |   |   |   |   |--- class: N\n",
-            "|   |   |   |   |--- feature_2 >  16.25\n",
+            "|   |   |   |   |--- feature_4 >  26.25\n",
             "|   |   |   |   |   |--- class: A\n",
-            "|   |   |   |--- feature_0 >  7.25\n",
+            "|   |   |   |--- feature_1 >  12.25\n",
             "|   |   |   |   |--- feature_2 <= 16.25\n",
             "|   |   |   |   |   |--- class: N\n",
             "|   |   |   |   |--- feature_2 >  16.25\n",
             "|   |   |   |   |   |--- class: C\n",
             "|   |   |--- feature_8 >  3.95\n",
             "|   |   |   |--- class: V\n",
-            "|--- feature_6 >  180.00\n",
+            "|--- feature_7 >  197.50\n",
             "|   |--- class: F\n",
             "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.model_selection import cross_val_score\n",
+        "\n",
+        "print (cross_val_score(clf,training_data,training_label,cv=3, scoring=\"accuracy\"))\n",
+        "\n",
+        "\n",
+        "test_data  = test_set.drop(\"Classe\",axis=1)\n",
+        "test_label = test_set[\"Classe\"].copy()\n",
+        "\n",
+        "print(cross_val_score(clf,test_data,test_label,cv=3, scoring=\"accuracy\"))\n"
+      ],
+      "metadata": {
+        "id": "fajk30es7g3f",
+        "outputId": "4fc1f886-2657-413e-9a45-f8875117af15",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0.97560976 0.95121951 1.        ]\n",
+            "[0.90909091 1.         1.        ]\n"
           ]
         }
       ]
