Creato con Colaboratory

--- a/frasal.ipynb
+++ b/frasal.ipynb
@@ -6,7 +6,7 @@
       "name": "frasal.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMfbZLlvDSA/M6J0UOv5oUw",
+      "authorship_tag": "ABX9TyOtQK9PA4PQVdDN2fSTghim",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,12 +46,12 @@
       "metadata": {
         "id": "j4Yfg2Yl7esP"
       },
-      "execution_count": null,
+      "execution_count": 43,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 71,
       "metadata": {
         "id": "6ZnVYunkMaGw"
       },
@@ -86,7 +86,7 @@
       "metadata": {
         "id": "HGqz_wQ5oVYv"
       },
-      "execution_count": 2,
+      "execution_count": 72,
       "outputs": []
     },
     {
@@ -100,9 +100,9 @@
           "height": 268
         },
         "id": "8t9Rep62pTiH",
-        "outputId": "a116cd52-304d-409e-d7da-bf10dd8e8b4d"
+        "outputId": "b847cbe5-e556-423d-dd26-e589345365d6"
       },
-      "execution_count": 3,
+      "execution_count": 73,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -145,7 +145,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-8d162de4-3555-4d48-a9f6-06bb09570721\">\n",
+              "  <div id=\"df-63292b1a-998f-4668-8aa4-af28a9144585\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -246,7 +246,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-8d162de4-3555-4d48-a9f6-06bb09570721')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-63292b1a-998f-4668-8aa4-af28a9144585')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -297,12 +297,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-8d162de4-3555-4d48-a9f6-06bb09570721 button.colab-df-convert');\n",
+              "          document.querySelector('#df-63292b1a-998f-4668-8aa4-af28a9144585 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-8d162de4-3555-4d48-a9f6-06bb09570721');\n",
+              "          const element = document.querySelector('#df-63292b1a-998f-4668-8aa4-af28a9144585');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -325,7 +325,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 73
         }
       ]
     },
@@ -339,9 +339,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "e9y-HidBpVk4",
-        "outputId": "75e1acfe-e8d9-4e69-d97b-365832828236"
+        "outputId": "74a43a76-82ae-41df-b56b-241fc2d4d2bd"
       },
-      "execution_count": 4,
+      "execution_count": 74,
       "outputs": [
         {
           "output_type": "stream",
@@ -378,9 +378,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0oNCNVIcqDO3",
-        "outputId": "5b420bec-6a11-4eb0-a391-e31c673309da"
+        "outputId": "b112b164-dde9-4c1f-da6d-db36e8fd008a"
       },
-      "execution_count": 5,
+      "execution_count": 75,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -396,7 +396,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 75
         }
       ]
     },
@@ -413,9 +413,9 @@
           "height": 879
         },
         "id": "mN6ZQM6ptK_5",
-        "outputId": "0904e8ce-330f-46a8-f8c5-85b75b24ef12"
+        "outputId": "0b23a47c-f709-4248-8448-20685adc138d"
       },
-      "execution_count": 6,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "display_data",
@@ -441,7 +441,7 @@
       "metadata": {
         "id": "A0W5sZC5uNz2"
       },
-      "execution_count": 7,
+      "execution_count": 50,
       "outputs": []
     },
     {
@@ -455,9 +455,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "N03opRMGu8Vn",
-        "outputId": "1c086b67-1dd5-4c07-dace-146ba861740d"
+        "outputId": "31d7c2bf-0ab5-4aaa-e975-3714eb7ec529"
       },
-      "execution_count": 8,
+      "execution_count": 51,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -476,7 +476,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 51
         }
       ]
     },
@@ -490,9 +490,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "91gofcjQv4OJ",
-        "outputId": "82cd3a7f-655f-4048-d0d6-ec10d25009ae"
+        "outputId": "3e4bdf74-a9a7-4a50-bb83-baf6a5b9b6dc"
       },
-      "execution_count": 9,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -511,7 +511,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 52
         }
       ]
     },
@@ -525,9 +525,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "puQkzAEBwHSO",
-        "outputId": "67fb35f8-b888-412d-c260-138d72bd1b6a"
+        "outputId": "940f2bec-a6a0-4bb1-a56e-ddcfa4e36429"
       },
-      "execution_count": 10,
+      "execution_count": 53,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -546,7 +546,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 53
         }
       ]
     },
@@ -569,35 +569,35 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "K3l0rHPFxVaQ",
-        "outputId": "b372f5c4-2944-4a9a-ea21-7ea6dbdb96b9"
+        "outputId": "e09b77c3-d73e-4a17-f8c8-7f5a074f2884"
       },
-      "execution_count": 11,
+      "execution_count": 54,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "|--- feature_7 <= 197.50\n",
+            "|--- feature_6 <= 180.00\n",
             "|   |--- feature_5 <= 3.90\n",
             "|   |   |--- class: P\n",
             "|   |--- feature_5 >  3.90\n",
             "|   |   |--- feature_8 <= 3.95\n",
             "|   |   |   |--- feature_1 <= 12.25\n",
-            "|   |   |   |   |--- feature_4 <= 26.25\n",
+            "|   |   |   |   |--- feature_2 <= 16.25\n",
             "|   |   |   |   |   |--- feature_0 <= 6.50\n",
             "|   |   |   |   |   |   |--- class: A\n",
             "|   |   |   |   |   |--- feature_0 >  6.50\n",
             "|   |   |   |   |   |   |--- class: N\n",
-            "|   |   |   |   |--- feature_4 >  26.25\n",
+            "|   |   |   |   |--- feature_2 >  16.25\n",
             "|   |   |   |   |   |--- class: A\n",
             "|   |   |   |--- feature_1 >  12.25\n",
-            "|   |   |   |   |--- feature_2 <= 16.25\n",
+            "|   |   |   |   |--- feature_3 <= 26.25\n",
             "|   |   |   |   |   |--- class: N\n",
-            "|   |   |   |   |--- feature_2 >  16.25\n",
+            "|   |   |   |   |--- feature_3 >  26.25\n",
             "|   |   |   |   |   |--- class: C\n",
             "|   |   |--- feature_8 >  3.95\n",
             "|   |   |   |--- class: V\n",
-            "|--- feature_7 >  197.50\n",
+            "|--- feature_6 >  180.00\n",
             "|   |--- class: F\n",
             "\n"
           ]
@@ -607,31 +607,117 @@
     {
       "cell_type": "code",
       "source": [
+        "from sklearn.neural_network import MLPClassifier\n",
+        "\n",
+        "NN_clf = MLPClassifier(solver='lbfgs', alpha=1e-5, hidden_layer_sizes=(5, 2), random_state=1)\n",
+        "NN_clf = NN_clf.fit(training_data, training_label)\n",
+        "\n",
+        "from sklearn import svm\n",
+        "svm_clf = svm.SVC()"
+      ],
+      "metadata": {
+        "id": "PFRtrbIdAf5m"
+      },
+      "execution_count": 82,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "from sklearn.model_selection import cross_val_score\n",
-        "\n",
-        "print (cross_val_score(clf,training_data,training_label,cv=3, scoring=\"accuracy\"))\n",
-        "\n",
         "\n",
         "test_data  = test_set.drop(\"Classe\",axis=1)\n",
         "test_label = test_set[\"Classe\"].copy()\n",
         "\n",
-        "print(cross_val_score(clf,test_data,test_label,cv=3, scoring=\"accuracy\"))\n"
+        "print (cross_val_score(clf,training_data,training_label,cv=3, scoring=\"accuracy\"))\n",
+        "print(cross_val_score(clf,test_data,test_label,cv=3, scoring=\"accuracy\"))\n",
+        "\n",
+        "print(cross_val_score(NN_clf,training_data,training_label,cv=3, scoring=\"accuracy\"))\n",
+        "print(cross_val_score(NN_clf,test_data,test_label,cv=3, scoring=\"accuracy\"))\n",
+        "\n",
+        "print(cross_val_score(svm_clf,training_data,training_label,cv=3, scoring=\"accuracy\"))\n",
+        "print(cross_val_score(svm_clf,test_data,test_label,cv=3, scoring=\"accuracy\"))\n"
       ],
       "metadata": {
-        "id": "fajk30es7g3f",
-        "outputId": "4fc1f886-2657-413e-9a45-f8875117af15",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "fajk30es7g3f",
+        "outputId": "cb855af4-8201-49bb-c6c0-14a67922beb6"
       },
-      "execution_count": 29,
+      "execution_count": 83,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "[0.97560976 0.95121951 1.        ]\n",
-            "[0.90909091 1.         1.        ]\n"
+            "[0.90909091 1.         1.        ]\n",
+            "[0.34146341 0.34146341 0.325     ]\n",
+            "[0.18181818 0.3        0.3       ]\n",
+            "[0.51219512 0.48780488 0.5       ]\n",
+            "[0.54545455 0.6        0.6       ]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from joblib import dump, load\n",
+        "dump(clf, 'frasal_model.joblib')"
+      ],
+      "metadata": {
+        "id": "s1FV4wvkjKA6",
+        "outputId": "697dda60-b670-4ad5-c9fa-7dde365caff9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 77,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['frasal_model.joblib']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 77
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "predict_clf = load('frasal_model.joblib')\n",
+        "st = [7.0, 12.0, 16.0,\t26.0,\t26.0,\t4.0,\t105,\t115,\t3.5]\n",
+        "print(predict_clf.predict([st]))"
+      ],
+      "metadata": {
+        "id": "V3HUiaBOjF_c",
+        "outputId": "236e18ce-224a-494a-c653-0b97295c3ff2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 78,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['N']\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/sklearn/base.py:451: UserWarning: X does not have valid feature names, but DecisionTreeClassifier was fitted with feature names\n",
+            "  \"X does not have valid feature names, but\"\n"
           ]
         }
       ]
